--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
 
 .container_infos span{
     margin-top: 15px;
-    color: whitesmoke;
+    color: white;
     font-weight: bold;
     font-size: 50px;
     margin: 0px 0px 15px;
