--- a/style.css
+++ b/style.css
@@ -43,11 +43,26 @@ body{
     
 }
 
+button{
+    cursor: pointer;
+}
+
 .container_inicial{
     display: flex;
     justify-content: center;
     height: 100vh;
     padding-top: 25px;
+}
+
+.container_infos {
+    height: 64px;
+    border-radius: 32px;
+    padding: 0;
+    width: 156px;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container_infos span{
@@ -74,7 +89,54 @@ body{
 }
 
 .container_botoes{
-    
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    padding-top: 15px;
+    align-content: center;
+    font-size: 18px;
+}
+.container_botoes .Sobre_mimBTN{
+    height: 64px;
+    width: 250px;
+    border-radius: 32px;
+    background: transparent;
+    border: 1px solid rgb(64,64,64);
+    padding: 0px;
+
+    margin-bottom: 2rem;
+    font-size: 18px;
+    font-weight: 300;
+    color: whitesmoke;
+}
+
+.container_botoes .Meus_ProjetosBTN{
+    height: 64px;
+    width: 500px;
+    border-radius: 32px;
+    background: transparent;
+    border: 1px solid rgb(64,64,64);
+    padding: 0px;
+
+    margin-bottom: 2rem;
+    font-size: 18px;
+    font-weight: 300;
+    color: whitesmoke;
+}
+
+.container_botoes .ContatoBTN{
+    height: 64px;
+    width: 250px;
+    border-radius: 32px;
+    background: transparent;
+    border: 1px solid rgb(64,64,64);
+    padding: 0px;
+
+    margin-bottom: 2rem;
+    font-size: 18px;
+    font-weight: 300;
+    color: whitesmoke;
 }
 
 .nav-list{
