--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button{
     width: 100%;
 }
 
-.container_infos {
+/* .container_infos {
     height: 64px;
     border-radius: 32px;
     padding: 0;
@@ -64,7 +64,7 @@ button{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
 
 
@@ -89,6 +89,7 @@ button{
        display: flex;
     flex-direction: column;
     color: whitesmoke;
+    max-width: 1200;
 }
 
 .container_botoes{
@@ -96,52 +97,80 @@ button{
     align-items: center;
     justify-items: center;
     width: 100%;
-    padding-top: 15px;
+    padding-top: 25px;
     align-content: center;
-
+    width: 100%;
     grid-gap: 12px;
     gap: 12px;
 }
+
+.container_botoes .Sobre_mimBTN:hover{
+    transform: scale(1.1);
+}
+
+.container_botoes .Sobre_mimBTN a:hover{
+    opacity: 0.7;
+}
+
 .container_botoes .Sobre_mimBTN{
     height: 64px;
-    width: 500px;
+    width: 200px;
     border-radius: 32px;
     background: transparent;
-    border: 1px solid rgb(64,64,64);
+    border: 1px linear-gradient(90deg, #9572FC 0%, #800080 50.52%, #1a2771 100%);
     padding: 0px;
 
     margin-bottom: 2rem;
     font-size: 15px;
     font-weight: 300;
     color: whitesmoke;
+    transition: transform .3s;
+}
+
+.container_botoes .Meus_ProjetosBTN:hover{
+    transform: scale(1.1);
+}
+
+.container_botoes .Meus_ProjetosBTN a:hover{
+    opacity: 0.7;
 }
 
 .container_botoes .Meus_ProjetosBTN{
     height: 64px;
-    width: 500px;
+    width: 200px;
     border-radius: 32px;
     background: transparent;
-    border: 1px solid rgb(64,64,64);
+    border: 1px linear-gradient(90deg, #9572FC 0%, #800080 50.52%, #1a2771 100%);
     padding: 0px;
 
     margin-bottom: 2rem;
     font-size: 15px;
     font-weight: 300;
     color: whitesmoke;
+    transition: transform .3s;
+}
+
+.container_botoes .ContatoBTN:hover{
+    transform: scale(1.1);
+}
+
+.container_botoes .ContatoBTN a:hover{
+    opacity: 0.7;
 }
 
 .container_botoes .ContatoBTN{
     height: 64px;
-    width: 500px;
+    width: 200px;
     border-radius: 32px;
     background: transparent;
-    border: 1px solid rgb(64,64,64);
+    border: 1px linear-gradient(90deg, #9572FC 0%, #800080 50.52%, #1a2771 100%);
     padding: 0px;
 
     margin-bottom: 2rem;
     font-size: 15px;
     font-weight: 300;
     color: whitesmoke;
+    transition: transform .3s;
 }
 
 .nav-list{
@@ -167,6 +196,40 @@ button{
     transition: 0.3s;
 
 }
+
+
+.FotoResumo{
+    /* padding-top: 32px; */
+    height: 100%;
+    width: 120px;
+    margin: auto;
+    background-image: linear-gradient(90deg, #9572FC 0%, #800080 50.52%, #1a2771 100%);
+
+    border-radius: 50%;
+
+    display: flex;
+    padding: 4px;
+
+    transition: transform .3s;
+}
+
+.FotoResumo img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+.FotoResumo:hover{
+    transform: scale(1.1);
+}
+
+.Resumo{
+    display: flex;
+    justify-content: center;
+    
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
 
 @media (max-width: 999px){
 
