--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 
 a{
@@ -34,7 +35,7 @@ nav{
     align-items: center;
     background: transparent;
     height: 8vh;
-    
+    box-shadow: 0 20px 35px rgba(0,0,0,0.3);
 }
 
 
@@ -93,6 +94,7 @@ button{
 }
 
 .container_botoes{
+    justify-content: center;
     display: flex;
     align-items: center;
     justify-items: center;
@@ -212,6 +214,11 @@ button{
     padding: 4px;
 
     transition: transform .3s;
+
+    animation-name: rgbPerfil;
+    animation-delay: 5s;
+    animation-iteration-count: infinite;   
+    animation-duration: 6s; 
 }
 
 .FotoResumo img{
@@ -226,11 +233,20 @@ button{
 .Resumo{
     display: flex;
     justify-content: center;
-    
+    flex-direction: column;
+    align-items: center;
     margin-top: 25px;
     margin-bottom: 25px;
 }
 
+
+.textoResumo{
+    padding: 15px 0;
+    display: flex;
+    align-content: center;
+    text-align:justify;
+    width: 350px;
+}
 
 @media (max-width: 999px){
 
@@ -300,6 +316,15 @@ button{
       .mobile-menu.active .line3 {
         transform: rotate(45deg) translate(-5px, -7px);
       }
+}
+
+
+@keyframes rgbPerfil{
+
+    0% {background-image: solid red}
+    50% {background-image: solid blue}
+    100% {background-image: solid red;}
+
 }
 
 .conteudo{
