--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button{
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 85vh;
+    height: 50vh;
     padding-top: 25px;
     
 }
@@ -101,7 +101,7 @@ button{
        display: flex;
     flex-direction: column;
     color: whitesmoke;
-    max-width: 1200;
+    max-width: 800;
 }
 
 .container_botoes{
@@ -308,6 +308,22 @@ button{
     margin-bottom: 25px;
 }
 
+.Resumo1{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-top: 25px;
+}
+
+.Resumo1 h1{
+    color: white;
+    text-decoration: none;
+    transition: 0.3s ;
+    font-size: 16px;
+}
 
 .textoResumo{
     padding: 30px 0;
@@ -315,6 +331,16 @@ button{
     align-content: center;
     text-align:justify;
     width: 350px;
+}
+
+.resumoH{
+    
+    display: flex;
+    align-content: center;
+    text-align:justify;
+    width: 350px;
+    font-family: sans-serif;
+    text-decoration: none;
 }
 
 @media (max-width: 999px){
