--- a/style.css
+++ b/style.css
@@ -574,6 +574,21 @@ button{
     opacity: 0;
     pointer-events: none;
     transition: 0.5s ease-out;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.trn-1 span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: var(--dark);
+    font-weight: 800;
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .trn-1.is-active {
